UI Update.
Fixed JEI recipe window.
Moved grenades to a separate recipe category.
Moved all grenade configs to the server side.
Updated creative category and workbench icon for guns.
Changed some configs.
Removed old animations.
Improved grenade throw and pin sound playback logic.
Improved tech crosshair.